--- a/crawler-core/pom.xml
+++ b/crawler-core/pom.xml
@@ -39,5 +39,11 @@
 			<artifactId>log4j-core</artifactId>
 			<version>2.0-rc1</version>
 		</dependency>
+		 <dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.3.6</version>
+		</dependency>
+		
   </dependencies>
 </project>
