--- a/dataace-api/pom.xml
+++ b/dataace-api/pom.xml
@@ -59,6 +59,11 @@
 	<version>1.8.4.RELEASE</version>
 </dependency>
 
+ <dependency>
+	        <groupId>org.dataace</groupId>
+	        <artifactId>crawler-core</artifactId>
+	        <version>0.0.1-SNAPSHOT</version>
+	  </dependency>
 
 		<dependency>
 			<groupId>org.aspectj</groupId>
