--- a/crawler-core/pom.xml
+++ b/crawler-core/pom.xml
@@ -29,6 +29,11 @@
 	<artifactId>json</artifactId>
 	<version>20160212</version>
 </dependency>
+<dependency>
+	<groupId>com.google.code.gson</groupId>
+	<artifactId>gson</artifactId>
+	<version>2.2.2</version>
+</dependency>
      <dependency>
 	        <groupId>org.jsoup</groupId>
 	        <artifactId>jsoup</artifactId>
