增加拍拍贷黑名单插件

--- a/extractor-plugins/pom.xml
+++ b/extractor-plugins/pom.xml
@@ -31,5 +31,6 @@
   <modules>
   	<module>rong36kr-extractor</module>
   	<module>toutiao-extractor</module>
+  	<module>ppdai-extractor</module>
   </modules>
 </project>
