add p2p12580.xml plugin

--- a/extractor-plugins/pom.xml
+++ b/extractor-plugins/pom.xml
@@ -32,5 +32,6 @@
   	<module>rong36kr-extractor</module>
   	<module>toutiao-extractor</module>
   	<module>ppdai-extractor</module>
+  	<module>p2p12580-extractor</module>
   </modules>
 </project>
